--- a/error bars/average+spot.ipynb
+++ b/error bars/average+spot.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -244,14 +242,31 @@
     "sns.set_context(\"paper\")\n",
     "\n",
     "plt.show()\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c887980dbb5a4bb5838604a005813d5d"
+      }
+     },
+     "metadata": {}
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -259,8 +274,8 @@
    "hash": "b540432151af48556bc7364d6bfcb38bf91721b3c01524b3cda6da860bdf0fae"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('myenv': conda)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('myenv': conda)"
   },
   "language_info": {
    "codemirror_mode": {
