testing commit to branch

--- a/learning/DISC_Pandas_DF.ipynb
+++ b/learning/DISC_Pandas_DF.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "(1421, 17)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "[1421 rows x 15 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -455,27 +455,18 @@
       "1906-08  USC00025467  MESA, AZ US  103.3   0.0  30.5  38.5  22.5\n",
       "1911-07  USC00025467  MESA, AZ US  151.6   0.0  29.0  35.6  22.4\n",
       "1931-02  USC00025467  MESA, AZ US  114.5   0.0  12.6  19.4   5.7\n",
-      "1936-07  USC00025467  MESA, AZ US  106.1   0.0  31.9  40.6  23.3\n",
-      "1940-12  USC00025467  MESA, AZ US  103.2   0.0  13.0  19.7   6.3\n",
-      "1943-08  USC00025467  MESA, AZ US  106.3   0.0  29.8  36.9  22.7\n",
-      "1965-12  USC00025467  MESA, AZ US  105.6   0.0  11.9  18.3   5.6\n",
-      "1967-12  USC00025467  MESA, AZ US  108.5   0.0   9.2  15.8   2.6\n",
-      "1992-03  USC00025467  MESA, AZ US  109.8   0.0   NaN   NaN   NaN\n",
-      "1993-01  USC00025467  MESA, AZ US  147.7   0.0   NaN   NaN   NaN\n",
-      "1998-02  USC00025467  MESA, AZ US  112.3   0.0   NaN   NaN   NaN\n",
-      "2000-10  USC00025467  MESA, AZ US  104.7   0.0   NaN   NaN   NaN\n",
-      "2014-09  USC00025467  MESA, AZ US  139.5   NaN   NaN   NaN   NaN\n"
+      "1936-07  USC00025467  MESA, AZ US  106.1   0.0  31.9  40.6  23.3\n"
      ]
     }
    ],
    "source": [
     "rainy  = df.loc[df.PRCP >= 100]\n",
-    "print(rainy)"
+    "print(rainy.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -526,18 +517,18 @@
       "1940-12  USC00025467  MESA, AZ US  103.2   0.0  13.0  19.7   6.3  13.00\n",
       "1943-08  USC00025467  MESA, AZ US  106.3   0.0  29.8  36.9  22.7  29.80\n",
       "1965-12  USC00025467  MESA, AZ US  105.6   0.0  11.9  18.3   5.6  11.95\n",
-      "1967-12  USC00025467  MESA, AZ US  108.5   0.0   9.2  15.8   2.6   9.20\n",
-      "         TMAX  TMIN  MMAVE\n",
-      "DATE                      \n",
-      "1905-02  19.1   7.7  13.40\n",
-      "1906-08  38.5  22.5  30.50\n",
-      "1911-07  35.6  22.4  29.00\n",
-      "1931-02  19.4   5.7  12.55\n",
-      "1936-07  40.6  23.3  31.95\n",
-      "1940-12  19.7   6.3  13.00\n",
-      "1943-08  36.9  22.7  29.80\n",
-      "1965-12  18.3   5.6  11.95\n",
-      "1967-12  15.8   2.6   9.20\n"
+      "1967-12  USC00025467  MESA, AZ US  108.5   0.0   9.2  15.8   2.6   9.20\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'rainy_temps' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-214695217a75>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrainy_new\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mrainy_temps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'MMAVE'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrainy_temps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'columns'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrainy_temps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'rainy_temps' is not defined"
      ]
     }
    ],
@@ -554,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
